vault/public-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vault
  namespace: vault
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      hostname: vault.bhuplabs.dev
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: websecure
      hostname: vault.bhuplabs.dev
      port: 8443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: vault-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-http-redirect
  namespace: vault
spec:
  parentRefs:
    - name: vault
      sectionName: web
  hostnames:
    - vault.bhuplabs.dev
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
spec:
  parentRefs:
    - name: vault
      sectionName: websecure
  hostnames:
    - vault.bhuplabs.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault-ui
          port: 8200
